# ml_framework

./: CMakeLists.txt
cmake/: MachineLearningConfig.cmake.in
include/: ML.h
src/: ML.c
